--- a/patches/patches.css
+++ b/patches/patches.css
@@ -1,3 +1,7 @@
 .titleBar__421ed {
     background-color: rgb(0, 0, 0, var(--windowbar-brightness)) !important
 }
+#app-mount .bar_c38106 {
+    border-radius: 0;
+    background: rgb(0, 0, 0, var(--top-brightness));
+}
