--- a/themes/Froggle.theme.css
+++ b/themes/Froggle.theme.css
@@ -1,7 +1,7 @@
 /**
- * @name Ethereal Glass
+ * @name Froggle
  * @author killameep
- * @version 1.0.1
+ * @version 2.0.1
  * @description Custom edit of Frosted Glass theme.
  * @invite E5f3Pd9NTh
  * @authorId 247075046659457024
@@ -14,53 +14,55 @@
 /* BlackBox tags */
 @import url('https://monstrousdev.github.io/themes/addons/user-tags.css');
 
+/* Old Windows titlebar - remove this @import if you wish to use default titlebar */
+@import url("https://gibbu.github.io/BetterDiscord-Themes/addons/windows-titlebar.css");
+
 /* Removal of bad bar (has been a bad boy) */
 @import url("https://raw.githubusercontent.com/KillaMeep/vencord-themes/refs/heads/main/patches/remove-shitty-bar.css");
 
 /* Visual Refresh Fixes */
 @import url("https://raw.githubusercontent.com/KillaMeep/vencord-themes/refs/heads/main/patches/refresh-patch.css");
 
-
-
 :root {
   /* Background image variables */
-  --background-image: url('https://github.com/KillaMeep/vencord-themes/blob/main/media/Ethereal/Background.jpeg?raw=true'); /* Main background image | URL MUST BE A DIRECT LINK (ending in .jpg, .jpeg, .png, .gif) */
-  --background-image-blur: 5px; /* Blur intensity of --background-image | Must end in px | DEFAULT: 5px */
+  --background-image: url('https://github.com/KillaMeep/vencord-themes/blob/main/media/Froggle/background-2.gif?raw=true'); /* Main background image | URL MUST BE A DIRECT LINK (ending in .jpg, .jpeg, .png, .gif) */
+  
+  --background-image-blur: 7px; /* Blur intensity of --background-image | Must end in px | DEFAULT: 5px */
   --background-image-size: cover; /* Size of the background image | DEFAUT: cover | OPTIONS: cover, contain */
   --background-image-position: center; /* Position of background image | DEAFULT: center | OPTIONS: top, right, bottom, left, center */
 
   /* Popout & Modal variables */
-  --popout-modal-image: var(--background-image); /* Background image for popouts and modals | URL MUST BE A DIRECT LINK (ending in .jpg, .jpeg, .png, .gif) */
-  --popout-modal-blur: 5px; /* Blur intensity of --popout-modal-image | Must end in px | DEFAULT: 5px */
+  --popout-modal-image: url("https://github.com/KillaMeep/vencord-themes/blob/main/media/Froggle/green_modal_gradient_v2.png?raw=true"); /* Background image for popouts and modals | URL MUST BE A DIRECT LINK (ending in .jpg, .jpeg, .png, .gif) */
+  --popout-modal-blur: 0px; /* Blur intensity of --popout-modal-image | Must end in px | DEFAULT: 5px */
   --popout-modal-size: cover; /* Size of the popout/modal image | DEFAUT: cover | OPTIONS: cover, contain */
   --popout-modal-position: center; /* Position of popout/modal image | DEAFULT: center | OPTIONS: top, right, bottom, left, center */
 
   /* Home image variables */
-  --home-button-image: url('https://gibbu.github.io/BetterDiscord-Themes/FrostedGlass/assets/discord.svg'); /* Home button image | URL MUST BE A DIRECT LINK (ending in .jpg, .jpeg, .png, .gif) */
+  --home-button-image: url('https://github.com/KillaMeep/vencord-themes/blob/main/media/Froggle/home-icon-2.gif?raw=true'); /* Home button image | URL MUST BE A DIRECT LINK (ending in .jpg, .jpeg, .png, .gif) */
   --home-button-size: cover; /* Size of the home button image | DEFAUT: cover */
   --home-button-position: center; /* Position of home button image | DEAFULT: center */
 
   /* Brightness variables */
-  --serverlist-brightness: 0; /* Brightness for serverlist | 0 - 1 (decimals allowed) | DEFAULT: 0.8 */
-  --left-brightness: 0.5; /* Channels and DM list brightness | 0 - 1 (decimals allowed) | DEFAULT: 0.8 */
-  --middle-brightness: 0.6; /* Chat brightness | 0 - 1 (decimals allowed) | DEFAULT: 0.6 */
-  --right-brightness: 0; /* Members and Now Playing brightness | 0 - 1 (decimals allowed) | DEFAULT: 0 */
-  --popout-modal-brightness: 0.75; /* Brightness for popouts and modals | 0 - 1 (decimals allowed) | DEFAULT: 0.75 */
-  --top-brightness: 0.5; /* Brightness for the window title bar | 0 - 1 (decimals allowed) */
+  --serverlist-brightness: .6; /* Brightness for serverlist | 0 - 1 (decimals allowed) | DEFAULT: 0.8 */
+  --left-brightness: .6; /* Channels and DM list brightness | 0 - 1 (decimals allowed) | DEFAULT: 0.8 */
+  --middle-brightness: .6; /* Chat brightness | 0 - 1 (decimals allowed) | DEFAULT: 0.6 */
+  --right-brightness: .6; /* Members and Now Playing brightness | 0 - 1 (decimals allowed) | DEFAULT: 0 */
+  --popout-modal-brightness: 0; /* Brightness for popouts and modals | 0 - 1 (decimals allowed) | DEFAULT: 0.75 */
+  --top-brightness:.5;
 
   /* Gradient variables */
-  --gradient-primary: 103,58,183; /* DEFAULT: 103,58,183 */
-  --gradient-secondary: 63,81,181; /* DEFAULT: 63,81,181 */
-  --gradient-direction: 320deg; /* DEFAULT: 320deg */
+  --gradient-primary: 75, 146, 96; /* DEFAULT: 103,58,183 */
+  --gradient-secondary: 15, 41, 56; /* DEFAULT: 63,81,181 */
+  --gradient-direction: 140deg; /* DEFAULT: 320deg */
 
   /* Tint variables */
   --tint-colour: 255,51,159; /* Colour of tint | DEAFULT: 255,51,159 */
   --tint-brightness: 0; /* Brightness of --tint-colour | 0 - 1 (decimals allowed) | DEFAULT: 0 */
 
   /* Other variables */
-  --window-padding: 1px; /* Spacing around the Discord window | DEFAULT: 20px */
+  --window-padding: 0px; /* Spacing around the Discord window | DEFAULT: 20px */
   --window-roundness: 10px; /* Roundness of Discord | DEFAULT: 10px */
-  --scrollbar-colour: rgba(255,255,255,0.05); /* DEFAULT: rgba(255,255,255,0.05) */
+  --scrollbar-colour: rgb(255, 255, 255); /* DEFAULT: rgba(255,255,255,0.05) */
   --link-colour: #00b0f4; /* DEFAULT: #00b0f4 */
 
   /*
