--- a/themes/StarrySky.theme.css
+++ b/themes/StarrySky.theme.css
@@ -18,8 +18,8 @@
 /* BlackBox tags */
 @import url('https://monstrousdev.github.io/themes/addons/user-tags.css');
 
-
-@import url("https://discordstyles.github.io/FrostedGlass/dist/FrostedGlass.css");
+/* Fix broken links */
+@import url("https://themes.killameep.com/src/FrostedGlass");
 
 /* Visual Refresh Fixes */
 @import url("https://raw.githubusercontent.com/KillaMeep/vencord-themes/refs/heads/main/patches/refresh-patch.css");
